--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -304,8 +304,8 @@ a:hover {
 
   @media (min-width: 768px) {
     .footer-nav .footer-nav-grid {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-      column-gap: 13rem;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      column-gap: 10rem;
     }
   }
 
@@ -319,13 +319,13 @@ a:hover {
     font-weight: bold;
     text-decoration: none;
     line-height: 1.2;
+    border-bottom: 1px solid #d1d5db;
+    padding-bottom: 0.7rem;
   }
 
   .footer-nav .footer-nav-grid>li>.sub-menu {
     list-style: none;
-    margin: 1rem 0 0;
-    padding: 1rem 0 0;
-    border-top: 1px solid #d1d5db;
+    padding: 0.7rem 0 0;
   }
 
   .footer-nav .footer-nav-grid>li>.sub-menu>li+li {
