--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -576,6 +576,31 @@ header.bg-\[\#141416\] .text-gray-300 {
   background-color: #cd1d46;
 }
 
+/* Скроллбар фильтров каталога: такой же, как у списка городов */
+.filter-cities-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #4a5672 transparent;
+}
+
+.filter-cities-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.filter-cities-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.filter-cities-scroll::-webkit-scrollbar-thumb {
+  background-color: #4a5672;
+  border-radius: 9999px;
+  border: 1px solid transparent;
+  background-clip: padding-box;
+}
+
+.filter-cities-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #cd1d46;
+}
+
 /* Скроллбар и пункты мобильного меню в хедере */
 #mobile-menu {
   scrollbar-width: thin;
